finish ELT process

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 node_modules
+characteristic_reviews.csv
+characteristic_reviews.csv:Zone.Identifier
+characteristics.csv
+characteristics.csv:Zone.Identifier
+reviews_photos.csv
+reviews_photos.csv:Zone.Identifier
+reviews.csv
+reviews.csv:Zone.Identifier
