--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "axios": "^0.26.0",
     "express": "^4.17.3",
     "nodemon": "^2.0.15",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
