--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API for Reviews",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "watch": "webpack --watch",
     "server-dev": "npx nodemon server/index.js"
   },
@@ -32,6 +33,8 @@
     "babel-loader": "^8.2.3",
     "babel-preset-airbnb": "^5.0.0",
     "eslint-config-airbnb": "^19.0.4",
+    "jest": "^27.5.1",
+    "supertest": "^6.2.2",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
   }
