updating files to work on deployment server

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ reviews_photos.csv:Zone.Identifier
 reviews.csv
 reviews.csv:Zone.Identifier
 config.js
+archivedReviews.dump
+database.pem
+database.pem:Zone.Identifier
+sdcdatabase.pem
+ubuntu@54.226.180.49
